syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  rpc ActionStream (stream ActionRequest) returns (stream ActionReply);
}

message ActionRequest {
	// string в 2, 3 лучше заменить на что-то подходящее.
	oneof content {
		string name = 1;
		string motion = 2;
		string force = 3;
	}
}

message ActionReply {
	string answer = 1;
}